fix: worldengine bugs and autostart events